--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/noclusterwww"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.5.0",
     "body-parser": "1.10.2",
     "cookie-parser": "1.3.5",
     "express": "4.16.4",
