--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "1.10.2",
     "cookie-parser": "1.3.5",
     "express": "4.16.4",
+    "ibm-watson": "^5.2.1",
     "log4js": "^6.1.0",
     "mongoose": "^5.8.3",
     "pug": "^2.0.4"
